feat(filebrowser): redesign file browser, align SFTP icons (#141)
Rebuilds the docked local File Browser into a proper navigator (toolbar,
editable path bar that can root above ~, filter, type-aware icons, footer
counts, inline rename, copy path, sort, drag-and-drop) with async directory
loading, expansion-preserving refresh, keyboard shortcuts, persisted
position/width/show-hidden/last-root, and off-thread copy/move/archive/delete.
Delete asks Trash-or-permanent. Aligns the SFTP manager to the shared icons and
styling. Adds FileBrowserHistory/FileBrowserSort (with tests), new filebrowser.*
i18n keys across 8 languages, and a new File browser guide page (EN/DE).